...
    super.dispose();
  }

  static const List<String> _categories = [
    'Alat',
    'Alat Tulis',
    'Seragam',
    'Kerajinan',
    'Aksesori',
    'Lainnya',
  ];

  Future<XFile?> _pickImage() async {
...
